mudou a lista de restaurantes de h2 para ul

--- a/delivery/templates/delivery/lista_restaurantes.html
+++ b/delivery/templates/delivery/lista_restaurantes.html
@@ -1,8 +1,11 @@
 {% extends 'delivery/base.html' %}
 
 {% block content %}
-    {% for restaurante in restaurantes %}
-        <h2>{{ restaurante.nomerestaurante }}</h2>
-        {# TODO adicionar outros campos#}
-    {% endfor %}
+    <h2>Restaurantes</h2>
+    <ul>
+        {% for restaurante in restaurantes %}
+            <li>{{ restaurante.nomerestaurante }}</li>
+            {# TODO adicionar outros campos#}
+        {% endfor %}
+    </ul>
 {% endblock %}
