--- a/delivery/static/css/main.css
+++ b/delivery/static/css/main.css
@@ -1,33 +1,39 @@
-@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@200;300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@200;500&family=Quicksand:wght@300;600&display=swap');
 
 body {
-    margin: 1;
     padding: 0;
-    background-color: white;
+    background-color: #fffae4;
     font-family: 'Lexend Deca';
-    font-style: 300;
-
 }
 
 header {
-    background-color: #616132;
+    background-color: rgb(73, 107, 61);
     padding: 10px 20px;
     font-family: 'Lexend Deca';
     font-style: 200;
 }
 
 main {
-    margin-left: auto;
-    margin-right: auto;
-    width: 10em
+    text-align: center;
 }
 
-a {
-    color: #E0E0AF;
+.text-header {
+    color: white;
     text-decoration: none;
 }
 
-h2 {
-    margin: 1;
-    clip: #75608B;
+.text-restaurant {
+    color: black;
+    text-decoration: none;
+    font-family: 'Quicksand';
+    margin-top: 12rem;
+}
+
+.list-restaurant {
+    line-height: 0.4;
+    height: 0.2rem;
+}
+
+.list-restaurant p {
+    color: #fffae4;
 }
