--- a/delivery/templates/delivery/base.html
+++ b/delivery/templates/delivery/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,17 +8,19 @@
     <title>Kiki's Delivery Service</title>
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
 </head>
+
 <body>
     <nav>
         {# TODO Criar links para as páginas #}
         <a></a>
     </nav>
     <header>
-        <h1><a href="/">Kiki's Delivery Service</a></h1>
+        <h1><a class="text-header" href="/">Kiki's Delivery Service</a></h1>
     </header>
     <main>
         {% block content %}
         {% endblock %}
     </main>
 </body>
+
 </html>
