--- a/delivery/templates/delivery/detalhes_restaurante.html
+++ b/delivery/templates/delivery/detalhes_restaurante.html
@@ -1,8 +1,8 @@
 {% extends 'delivery/base.html' %}
 
 {% block content %}
-    <h2> {{ restaurante.nomerestaurante }} </h2>
-    <p>CNPJ: {{ restaurante.cnpj }}</p>
+    <h2 class="list-restaurant"> {{ restaurante.nomerestaurante }} </h2>
+    <p class="list-restaurant" >CNPJ: {{ restaurante.cnpj }}</p>
     <h3>Pratos:</h3>
     <section>
         {% for comida in comidas %}
