--- a/delivery/templates/delivery/base.html
+++ b/delivery/templates/delivery/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% load static %}
-    <title>Kiki's Delivery Service</title>
+    <title>Derrotado's Delivery Service</title>
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
 </head>
 <body>
@@ -13,7 +13,7 @@
         <a></a>
     </nav>
     <header>
-        <h1><a href="/">Kiki's Delivery Service</a></h1>
+        <h1><a href="/">Derrotado's Delivery Service</a></h1>
     </header>
     <main>
         {% block content %}
