--- a/delivery/templates/delivery/lista_restaurantes.html
+++ b/delivery/templates/delivery/lista_restaurantes.html
@@ -4,7 +4,7 @@
     <h2>Restaurantes</h2>
     <section>
         {% for restaurante in restaurantes %}
-            <h3><a href="{% url 'detalhes_restaurante' pk=restaurante.pk %}">{{ restaurante.nomerestaurante }}</a></h3>
+            <h3><a href="{% url 'detalhes_restaurante' pk=restaurante.pk %}">{{ restaurante.nome_restaurante }}</a></h3>
         {% endfor %}
     </section>
 {% endblock %}
