--- a/delivery/templates/delivery/lista_restaurantes.html
+++ b/delivery/templates/delivery/lista_restaurantes.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <section class="list-restaurant">
-        <h2>Restaurantes</h2>
+        <h2>Restaurantes</h2><br>
         {% for restaurante in restaurantes %}
             <h3><a class="text-restaurant" href="{% url 'detalhes_restaurante' pk=restaurante.pk %}">{{ restaurante.nome_restaurante }}</a></h3>
         {% endfor %}
