--- a/delivery/static/css/main.css
+++ b/delivery/static/css/main.css
@@ -37,3 +37,19 @@ main {
 .list-restaurant p {
     color: #fffae4;
 }
+
+button {
+    max-width: 64px;
+    max-height: 64px;
+    background-color: #fffae4;
+    border: none;
+    align-self: center;
+}
+
+form {
+    width: 12rem;
+    line-height: 1.20;
+    width: 200px;
+    margin-left: auto;
+    margin-right: auto;
+}
