motoboys adicionados aos detalhes do restaurante

--- a/delivery/templates/delivery/detalhes_restaurante.html
+++ b/delivery/templates/delivery/detalhes_restaurante.html
@@ -6,8 +6,15 @@
     <h3>Cardápio:</h3>
     <section>
         {% for comida in comidas %}
-        <h4>{{ comida.nome_comida }}</h4>
-        <p>R$ {{ comida.preco }}</p>
+            <h4>{{ comida.nome_comida }}</h4>
+            <p>R$ {{ comida.preco }}</p>
+        {% endfor %}
+    </section><br>
+    <h3>Motoboys do {{ restaurante.nome_restaurante }}:</h3>
+    <section>
+        {% for motoboy in motoboys %}
+            <h4>{{ motoboy.nome_motoboy }}</h4>
+            <p>Placa: {{ motoboy.placa }}</p>
         {% endfor %}
     </section>
 {% endblock %}
