--- a/delivery/templates/delivery/base.html
+++ b/delivery/templates/delivery/base.html
@@ -11,8 +11,10 @@
 
 <body>
     <nav>
-        {# TODO Criar links para as páginas #}
-        <a></a>
+        <a href="/" class="cabecalho">Restaurantes</a>
+        <a href="{% url 'motoboys' %}" class="cabecalho">Motoboys</a>
+        <a href="{% url 'pedido' %}" class="cabecalho">Fazer Pedido</a>
+        <a href="{% url 'cadastro' %}" class="cabecalho">Cadastro de Clientes</a>
     </nav>
     <header>
         <h1><a class="text-header" href="/">Derrotado's Delivery Service</a></h1>
