--- a/delivery/static/css/main.css
+++ b/delivery/static/css/main.css
@@ -34,8 +34,9 @@ main {
     height: 0.2rem;
 }
 
-.list-restaurant p {
-    color: #fffae4;
+.list-cardap {
+    line-height: 0.1;
+    font-family: 'Quicksand'
 }
 
 button {
@@ -52,4 +53,21 @@ form {
     width: 200px;
     margin-left: auto;
     margin-right: auto;
+}
+
+nav {
+    background-image: url('https://lh3.googleusercontent.com/fife/AK0iWDxlA3M6p0muECn6TmuznPYu44VJncWp6-ZErAtsYYXuCp1ch8NW-O-A5Recy_8O5jQdZzGT2CNPTtNJZmAhiGovveSvUoPLIX55Sy3L-Z_BeY_ltRZEVDTTlGG2-X3Gfe_6Bs9naK2EspTdINggETeI5rOss4DzxiAaTjB8-fJx8qtMIhkpuiGPlnkIHXP_oEgvFCoLPYzZqBeT3P4T_TeNuTqNODHNDZuMRUqn8YfHWLgpbpAOdoNYKZ1Ke__Je2Wzh4xkGqguB25a-sDTVgCDrczUkDl-90xgN4bZST5EuRX2soKbVUcPixwPkWfNdR9fpg3GWp_tp6ip4WPBrH06x2Gw-SukGPkJHgos_PfWT9WoLyVHeBpdhUgMHJzAII9tIBMYnG-cknoRG-efvp-LjrpvFiOGI50u8tgOuOrevtWDKRShJRGzYQ-lo_3k2iPpSJ4Kca2e2nCGD1trXqy9ljr5-EFuvSsg8xRGda35e3dQ-w04AtQ6s7cFND3RIptVu3-oHY0nIS8wou3S4pVZAGsJiNVAKjOoe44WiWxS8XVfH-mrmQTMZFLv_jVNHEeB156PvWciJCamobsWRsqoxNBOU42qEXO2hY5g8QbS-Sn_Lt1tA_3ERI9iKcg7wB7vxBbDx1u-qE67rL8pUk6HaAkla-JUiO2Lw5ZPTuEmVjObkrkuRcjtmNYMiMXd-lLf5DG0FDOXawZP5MQwEhClMd6X8wwdjP0Hii6oX2xxXitxhNJdGM2Q0XjNESnBU1ik-SvgZacxoORgq55mCtWEU-204m-unO3Dhs7RiKMCOiwqmeAi48bECdFlvZNTVXej1SOqHIy6hvQgIBEhJCYRywLS7G2aoY8a84nR4q-EI-lAuabKjdvZpjeDxn8YY2zj3wfIwcGcRqSbVvIYxK_rhBt3-J7LYEyY1-NoS70BGlO8EXhCGrNA0aeeXyxJcFClMN2frOuxMxEhm8aYw2EFG-J0cuiL9VUEQqXfwuwd_m8CWxWldsqAJmfyTv0IsfeAHSMMcBg5zOaKaL6oK21DqEw5aVF5FLmSScQv98FU5qw4XZPcEkhDXhymLJsvh5Zkyaab-f48fHqcf2sfJaQwN_JqQEQ-7GDB7SKjULS8NogEropCWhHU-j6nJwYBe2-rzs_htPNfw6Q-9xU0OveiEfy3mBcNB9FtDYCzQyBWBnN4EaPoWTrNIxrSN6St62O2JhttckplgL_zcWZ7ghw5GUAPdQuISxQk-yNwjTXY9jhNcD6LP9m-rbSLyyqe0Oe8nJHuYSEuQ8e4G3JdQo7VJUItXXjbbuuy1seZ9AknhCjh6jaX4FOtNoDEV7v7vffIYpjDZm0KKj87SaPA3bW95kb9tUDo7K-Z0Xqc6V7hgZatECjKkG-6N2-4_OhK2OXjfrcosHxL8Ni4DyFH8OY7qX274pk6A-4lpeV3CsDYgnlg4jCUYs17Rl28ekDZ3gkwIssxYR3eJSqeAuppQlIOXs7SSEhMPR20VDocXsvEatcprevFH9BeraOGTX_pafZPBxi3QQKcHHXswb__6mSwSRAq1RlS4w1e7UhJSVajnsjXRjxDUG52VPgnqQgNx8r1AVBBrCTeDPu7S5csjtts9Rilmuny54I=w1325-h658');
+    background-repeat: repeat;
+    background-position:  10px;
+    background-size: 300px 300px;
+    height: 30px;
+    display: flex;
+    text-align: center;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.cabecalho {
+    color: rgb(6, 6, 7);
+    text-decoration: none;
 }
