adicionou a operação CREATE pra todas as entidades

--- a/delivery/templates/delivery/detalhes_restaurante.html
+++ b/delivery/templates/delivery/detalhes_restaurante.html
@@ -3,7 +3,7 @@
 {% block content %}
     <br>
     <h2 class="list-restaurant"> {{ restaurante.nome_restaurante }} </h2>
-    <p class="list-restaurant">CNPJ: {{ restaurante.cnpj }}</p>
+    <p class="list-restaurant">id_restaurante: {{ restaurante.id_restaurante }}</p>
     <h3>Cardápio:</h3>
     <br>
     <section>
