--- a/delivery/templates/delivery/base.html
+++ b/delivery/templates/delivery/base.html
@@ -17,7 +17,7 @@
         <a href="/" class="cabecalho">Restaurantes</a>
         <a href="{% url 'motoboys' %}" class="cabecalho">Motoboys</a>
         <a href="{% url 'pedido' %}" class="cabecalho">Fazer Pedido</a>
-        <a href="{% url 'cadastro' %}" class="cabecalho">Cadastro de Clientes</a>
+        <a href="{% url 'cadastros' %}" class="cabecalho">Cadastros</a>
     </nav>
     <main>
         {% block content %}
