--- a/delivery/templates/delivery/lista_motoboys.html
+++ b/delivery/templates/delivery/lista_motoboys.html
@@ -5,7 +5,8 @@
     <section class="list-restaurant">
         <h2>Motoboys</h2><br/>
         {% for motoboy in motoboys %}
-            <h3><a class="text-restaurant" href="{% url 'detalhes_motoboy' pk=motoboy.pk %}">{{ motoboy.nome_motoboy }}</a></h3>
+            <h3>{{ motoboy }}</h3>
+            <p>Placa: {{ motoboy.placa }}</p><br>
         {% endfor %}
     </section>
 {% endblock %}
