--- a/delivery/templates/delivery/lista_motoboys.html
+++ b/delivery/templates/delivery/lista_motoboys.html
@@ -3,7 +3,7 @@
 {% block content %}
     <br/>
     <section class="list-restaurant">
-        <h2>Motoboys</h2><br/>
+        <h2>Motoboys do Derrotado's Delivery</h2><br/>
         {% for motoboy in motoboys %}
             <h3>{{ motoboy }}</h3>
             <p>Placa: {{ motoboy.placa }}</p><br>
