operações UPDATE e DELETE adicionadas

--- a/delivery/templates/delivery/detalhes_cliente.html
+++ b/delivery/templates/delivery/detalhes_cliente.html
@@ -1,7 +1,7 @@
 {% extends 'delivery/base.html' %}
 
 {% block content %}
-    <h2 class="list-restaurant">Cadastro realizado com sucesso!</h2><br>
+    <h2 class="list-restaurant">Informações salvas com sucesso!</h2><br>
     <h3 class="list-restaurant">{{ cliente }}</h3><br>
     <p class="list-restaurant">Endereço: {{ cliente.endereco }}</p>
     <p class="list-restaurant">CPF: {{ cliente.cpf }}</p><br>
