--- a/delivery/templates/delivery/delete.html
+++ b/delivery/templates/delivery/delete.html
@@ -6,6 +6,6 @@
 <form method="post"> 
   {% csrf_token %}
   {{ form.as_p }} 
-  <button type="submit">Confirmar</button>
+  <button type="submit" class="btn">Confirmar</button>
 </form>
 {% endblock %}
