--- a/delivery/templates/delivery/entrega.html
+++ b/delivery/templates/delivery/entrega.html
@@ -1,12 +1,13 @@
 {% extends 'delivery/base.html' %}
 
 {% block content %}
-    <h2 class="list-restaurant">{{ entrega.id_pedido }}</h2>
-    <h4 class="text-restaurant">Cliente - {{ pedido.cliente }}</h4><br>
-    <p>Comidas:</p><br>
+    <h2 >{{ entrega.id_pedido }}</h2>
+    <h4 >Cliente - {{ pedido.cliente }}</h4><br>
+    <p>Comidas</p>
     {% for comida in comidas %}
         <p>{{ comida.nome_comida }} - {{ comida.restaurante }}</p>
     {% endfor %}
+    <br>
     <h4>Entregador - {{ motoboy.nome_motoboy }}</h4>
     <p>Placa: {{ motoboy.placa}}</p><br>
     <p>Seu pedido chega em um instante.</p><br>
