--- a/delivery/templates/delivery/lista_restaurantes.html
+++ b/delivery/templates/delivery/lista_restaurantes.html
@@ -4,13 +4,14 @@
     <br/>
     <section class="list-restaurant">
         <h2>Restaurantes</h2><br/>
-        <div class="restaurantes">
+        <div class="listagem">
             {% for restaurante in restaurantes %}
                 <div>
                     <h3><a class="text-restaurant" href="{% url 'detalhes_restaurante' pk=restaurante.pk %}">{{ restaurante.nome_restaurante }}</a></h3>
                 </div>
             {% endfor %}
         </div>
-        <br><br><a href="{% url 'cadastro_restaurante' %}">Cadastrar Restaurante</a>
+        <br><br><br><br><a href="{% url 'cadastro_restaurante' %}">Cadastrar Restaurante</a>
     </section>
+    
 {% endblock %}
